--- a/agileBuddy/index.html
+++ b/agileBuddy/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>是男人就下100层</title>
     <script src="js/lufylegend-1.10.1.min.js"></script>
+    <script src="js/Box2dWeb-2.1.a.3.min.js"></script>
     <style>
         *{
             margin: 0;
@@ -18,8 +19,8 @@
 </head>
 <body>
 <div id="myGame"></div>
-<script src="js/game.js"></script>
-<script src="js/imgData.js"></script>
+<script src="game/game.js"></script>
+<script src="game/imgData.js"></script>
 <script>
     var h5_config={
         speed           :50,
